--- a/sass/skew.scss
+++ b/sass/skew.scss
@@ -18,6 +18,7 @@ body {
     color: $fg_color;
     background: $bg_page;
     font-family: $font_serif, serif;
+    padding-bottom: 120px;
 }
 
 #main {
